feat(bank): szűrés
