# backend/src/question-bank/dto/bank-filter.dto.ts
@@ -1,12 +1,13 @@
 import { ApiProperty } from '@nestjs/swagger';
+import { IsOptional, IsArray, IsNumber } from 'class-validator';
 
 export class BankFilterDto {
-  @ApiProperty({ required: false })
-  categoryId?: number;
-
-  @ApiProperty({ required: false })
-  search?: string;
-
-  @ApiProperty({ required: false })
-  onlyMine?: boolean;
+  @ApiProperty({
+    required: false,
+    type: [Number]
+  })
+  @IsOptional()
+  @IsArray()
+  @IsNumber({}, { each: true })
+  categoryIds?: number[];
 }
